--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>The Generics - About</title>
-        <meta name="description" content="this is the description">
+        <title>The Bändi</title>
+        <meta name="description" content="sivun kuvaus">
     </head>
     <body>
         <header>
@@ -14,31 +14,33 @@
                 </ul>
             </nav>
             <hr>
-            <h1>The Generics</h1>
+            <h1>The Bändi</h1>
         </header>
-
         <section>
             <h2>ABOUT</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolorum nulla accusantium perferendis quam explicabo odit quisquam ea natus? Saepe ducimus, minima error alias dolorum consectetur officia architecto voluptatem iure sunt eveniet nam, recusandae explicabo, itaque vel autem. Accusamus suscipit sit labore sed blanditiis a est rem harum expedita veritatis numquam voluptatibus dolore voluptatum sunt repellendus explicabo, excepturi beatae perferendis. Numquam dicta quis ipsum explicabo suscipit alias placeat, ea, vero minus ducimus voluptatibus iste repellendus deleniti? Eos, quas! Voluptatem tempora explicabo, corrupti dolor hic iure quo, ipsum voluptates quaerat omnis accusamus et vel, necessitatibus doloribus optio. Odio nobis ad molestias.</p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
             <img src="Images/Band Members.png">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio qui consequuntur aut. Nobis debitis ipsum soluta sit itaque officiis impedit maiores suscipit magni id harum consequuntur quas delectus culpa, saepe nostrum, autem ullam! Assumenda molestiae reprehenderit sunt ducimus id saepe porro vitae asperiores eum accusantium? Illum aliquid excepturi magni quos.</p>
+            <p>
+                lorem ipsum dolor jne.
+            </p>
         </section>
-        
         <footer>
-            <h3>The Generics</h3>
+            <h3>The Bändi</h3>
             <ul>
                 <li>
-                    <a href="https://www.youtube.com" target="_blank">
+                    <a href="https://youtube.com" target="_blank">
                         <img src="Images/YouTube Logo.png">
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.spotify.com" target="_blank">
+                    <a href="https://spotify.com" target="_blank">
                         <img src="Images/Spotify Logo.png">
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com" target="_blank">
+                    <a href="https://facebook.com" target="_blank">
                         <img src="Images/Facebook Logo.png">
                     </a>
                 </li>
