--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>The Generics</title>
-        <meta name="description" content="this is the description">
+        <title>The Bändi</title>
+        <meta name="description" content="sivun kuvaus">
     </head>
     <body>
         <header>
@@ -14,91 +14,58 @@
                 </ul>
             </nav>
             <hr>
-            <h1>The Generics</h1>
-            <button type="button">Get Our Latest Album</button>
+            <h1>The Bändi</h1>
+            <button type="button">Get the album</button>
             <br>
             <br>
             <button type="button">&#9658;</button>
+            <!-- Hanki taustakuva -->
         </header>
         <section>
-            <h2>TOURS</h2>
+            <h2>Tours</h2>
             <div>
                 <div>
-                    <strong>JUL 16</strong>
+                    <strong>Jun 20</strong>
                     &lt;&gt;
-                    <span>DETROIT, MI</span>
+                    <span>Helsinki</span>
                     &lt;&gt;
-                    <span>DTE ENERGY MUSIC THEATRE</span>
-                    &lt;&gt;
-                    <button type="button">BUY TICKETS</button>
-                    <hr>
-                </div>
-                <div>
-                    <strong>JUL 19</strong>
-                    &lt;&gt;
-                    <span>TORONTO, ON</span>
-                    &lt;&gt;
-                    <span>BUDWEISER STAGE</span>
+                    <span>Tori</span>
                     &lt;&gt;
                     <button type="button">BUY TICKETS</button>
                     <hr>
-                </div>
-                <div>
-                    <strong>JUL 22</strong>
+                    <strong>Jun 27</strong>
                     &lt;&gt;
-                    <span>BRISTOW, VA</span>
+                    <span>Berlin</span>
                     &lt;&gt;
-                    <span>JIGGY LUBE LIVE</span>
+                    <span>Arena</span>
                     &lt;&gt;
                     <button type="button">BUY TICKETS</button>
                     <hr>
-                </div>
-                <div>
-                    <strong>JUL 29</strong>
+                    <strong>Jul 4</strong>
                     &lt;&gt;
-                    <span>PHOENIX, AZ</span>
+                    <span>London</span>
                     &lt;&gt;
-                    <span>AK-CHIN PAVILION</span>
-                    &lt;&gt;
-                    <button type="button">BUY TICKETS</button>
-                    <hr>
-                </div>
-                <div>
-                    <strong>AUG 2</strong>
-                    &lt;&gt;
-                    <span>LAS VEGAS, NV</span>
-                    &lt;&gt;
-                    <span>T-MOBILE ARENA</span>
-                    &lt;&gt;
-                    <button type="button">BUY TICKETS</button>
-                    <hr>
-                </div>
-                <div>
-                    <strong>AUG 7</strong>
-                    &lt;&gt;
-                    <span>CONCORD, CA</span>
-                    &lt;&gt;
-                    <span>CONCORD PAVILION</span>
+                    <span>Stadium</span>
                     &lt;&gt;
                     <button type="button">BUY TICKETS</button>
                 </div>
             </div>
         </section>
         <footer>
-            <h3>The Generics</h3>
+            <h3>The Bändi</h3>
             <ul>
                 <li>
-                    <a href="https://www.youtube.com" target="_blank">
+                    <a href="https://youtube.com" target="_blank">
                         <img src="Images/YouTube Logo.png">
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.spotify.com" target="_blank">
+                    <a href="https://spotify.com" target="_blank">
                         <img src="Images/Spotify Logo.png">
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com" target="_blank">
+                    <a href="https://facebook.com" target="_blank">
                         <img src="Images/Facebook Logo.png">
                     </a>
                 </li>
