--- a/store.html
+++ b/store.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>The Generics - Store</title>
-        <meta name="description" content="this is the description">
+        <title>The Bändi</title>
+        <meta name="description" content="sivun kuvaus">
     </head>
     <body>
         <header>
@@ -14,7 +14,7 @@
                 </ul>
             </nav>
             <hr>
-            <h1>The Generics</h1>
+            <h1>The Bändi</h1>
         </header>
         <section>
             <h2>MUSIC</h2>
@@ -24,8 +24,8 @@
                 </div>
                 <img src="Images/Album 1.png">
                 <div>
-                    <span>$12.99</span>
-                    <button type="button">ADD TO CART</button>
+                    <span>15 €</span>
+                    <button role="button">Add to Cart</button>
                 </div>
             </div>
             <div>
@@ -34,8 +34,8 @@
                 </div>
                 <img src="Images/Album 2.png">
                 <div>
-                    <span>$14.99</span>
-                    <button type="button">ADD TO CART</button>
+                    <span>15 €</span>
+                    <button role="button">Add to Cart</button>
                 </div>
             </div>
             <div>
@@ -44,8 +44,8 @@
                 </div>
                 <img src="Images/Album 3.png">
                 <div>
-                    <span>$9.99</span>
-                    <button type="button">ADD TO CART</button>
+                    <span>15 €</span>
+                    <button role="button">Add to Cart</button>
                 </div>
             </div>
             <div>
@@ -54,34 +54,26 @@
                 </div>
                 <img src="Images/Album 4.png">
                 <div>
-                    <span>$19.99</span>
-                    <button type="button">ADD TO CART</button>
+                    <span>15 €</span>
+                    <button role="button">Add to Cart</button>
                 </div>
             </div>
         </section>
+
         <section>
             <h2>MERCH</h2>
             <div>
                 <div>
-                    <strong>T-Shirt</strong>
+                    <strong>T-shirt</strong>
                 </div>
                 <img src="Images/Shirt.png">
                 <div>
-                    <span>$19.99</span>
-                    <button type="button">ADD TO CART</button>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <strong>Coffee Cup</strong>
-                </div>
-                <img src="Images/Cofee.png">
-                <div>
-                    <span>$6.99</span>
-                    <button type="button">ADD TO CART</button>
+                    <span>20 €</span>
+                    <button role="button">Add to Cart</button>
                 </div>
             </div>
         </section>
+
         <section>
             <h2>CART</h2>
             <div>
@@ -92,47 +84,46 @@
                 <strong>QUANTITY</strong>
             </div>
             <div>
-                <img src="Images/Shirt.png" width="100" height="100">
-                <span>T-Shirt</span>
+                <img src="Images/Shirt.png" width="100">
+                <span>T-shirt</span>
                 &lt;&gt;
-                <span>$19.99</span>
-                &lt;&gt;
+                <span>20 €</span>
                 <input type="number" value="1">
-                <button type="button">REMOVE</button>
+                <button role="button">REMOVE</button>
             </div>
             <div>
-                <img src="Images/Album 3.png" width="100" height="100">
+                <img src="Images/Album 3.png" width="100">
                 <span>Album 3</span>
                 &lt;&gt;
-                <span>$9.99</span>
-                &lt;&gt;
-                <input type="number" value="2">
-                <button type="button">REMOVE</button>
+                <span>15 €</span>
+                <input type="number" value="1">
+                <button role="button">REMOVE</button>
             </div>
             <hr>
             <div>
-                <strong>Total</strong>
-                <span>$39.97</span>
+                <strong>TOTAL</strong>
+                <span>35 €</span>
             </div>
             <div>
-                <button type="button">PURCHASE</button>
+                <button role="button">PURCHASE</button>
             </div>
         </section>
+
         <footer>
-            <h3>The Generics</h3>
+            <h3>The Bändi</h3>
             <ul>
                 <li>
-                    <a href="https://www.youtube.com" target="_blank">
+                    <a href="https://youtube.com" target="_blank">
                         <img src="Images/YouTube Logo.png">
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.spotify.com" target="_blank">
+                    <a href="https://spotify.com" target="_blank">
                         <img src="Images/Spotify Logo.png">
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com" target="_blank">
+                    <a href="https://facebook.com" target="_blank">
                         <img src="Images/Facebook Logo.png">
                     </a>
                 </li>
