--- a/about.html
+++ b/about.html
@@ -3,18 +3,18 @@
     <head>
         <title>The Bändi</title>
         <meta name="description" content="sivun kuvaus">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <nav>
+        <header class="main-header">
+            <nav class="nav main-nav">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="store.html">STORE</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                 </ul>
             </nav>
-            <hr>
-            <h1>The Bändi</h1>
+            <h1 class="name name-large">The Bändi</h1>
         </header>
         <section>
             <h2>ABOUT</h2>
