--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>The Bändi</title>
+        <title>The Generics</title>
         <meta name="description" content="sivun kuvaus">
         <link rel="stylesheet" href="style.css">
     </head>
