--- a/index.html
+++ b/index.html
@@ -26,21 +26,39 @@
             <h2 class="section-header">Tours</h2>
             <div>
                 <div class="tour-row">
-                    <span class="tour-item tour-date">Jun 20</span>
-                    <span class="tour-item tour-city">Helsinki</span>
-                    <span class="tour-item tour-arena">Tori</span>
+                    <span class="tour-item tour-date">JUL 16</span>
+                    <span class="tour-item tour-city">DETROIT, MI</span>
+                    <span class="tour-item tour-arena">DTE ENERGY MUSIC THEATRE</span>
                     <button class="btn tour-item tour-btn btn-primary" type="button">BUY TICKETS</button>
                 </div>
                 <div class="tour-row">
-                    <span class="tour-item tour-date">Jun 27</span>
-                    <span class="tour-item tour-city">Berlin</span>
-                    <span class="tour-item tour-arena">Arena</span>
+                    <span class="tour-item tour-date">JUL 19</span>
+                    <span class="tour-item tour-city">TORONTO, ON</span>
+                    <span class="tour-item tour-arena">BUDWEISER STAGE</span>
                     <button class="btn tour-item tour-btn btn-primary" type="button">BUY TICKETS</button>
                 </div>
                 <div class="tour-row">
-                    <span class="tour-item tour-date">Jul 4</span>
-                    <span class="tour-item tour-city">London</span>
-                    <span class="tour-item tour-arena">Stadium</span>
+                    <span class="tour-item tour-date">JUL 22</span>
+                    <span class="tour-item tour-city">BRISTOW, VA</span>
+                    <span class="tour-item tour-arena">JIGGY LUBE LIVE</span>
+                    <button class="btn tour-item tour-btn btn-primary" type="button">BUY TICKETS</button>
+                </div>
+                <div class="tour-row">
+                    <span class="tour-item tour-date">JUL 29</span>
+                    <span class="tour-item tour-city">PHOENIX, AZ</span>
+                    <span class="tour-item tour-arena">AK-CHIN PAVILION</span>
+                    <button class="btn tour-item tour-btn btn-primary" type="button">BUY TICKETS</button>
+                </div>
+                <div class="tour-row">
+                    <span class="tour-item tour-date">AUG 2</span>
+                    <span class="tour-item tour-city">LAS VEGAS, NV</span>
+                    <span class="tour-item tour-arena">T-MOBILE ARENA</span>
+                    <button class="btn tour-item tour-btn btn-primary" type="button">BUY TICKETS</button>
+                </div>
+                <div class="tour-row">
+                    <span class="tour-item tour-date">AUG 7</span>
+                    <span class="tour-item tour-city">CONCORD, CA</span>
+                    <span class="tour-item tour-arena">CONCORD PAVILION</span>
                     <button class="btn tour-item tour-btn btn-primary" type="button">BUY TICKETS</button>
                 </div>
             </div>
