--- a/store.html
+++ b/store.html
@@ -4,6 +4,7 @@
         <title>The Generics</title>
         <meta name="description" content="sivun kuvaus">
         <link rel="stylesheet" href="style.css">
+        <script src="store.js" async></script>
     </head>
     <body>
         <header class="main-header">
@@ -91,32 +92,11 @@
             </div>
 
             <div class="cart-items">
-                <div class="cart-row">
-                    <div class="cart-item cart-column">
-                        <img class="cart-item-image" src="Images/Shirt.png" width="100">
-                        <span class="cart-item-title">T-shirt</span>
-                    </div>
-                    <span class="cart-price cart-column">20 €</span>
-                    <div class="cart-quantity cart-column">
-                        <input class="cart-quantity-input" type="number" value="1">
-                        <button class="btn btn-danger" role="button">REMOVE</button>
-                    </div>
-                </div>
-                <div class="cart-row">
-                    <div class="cart-item cart-column">
-                        <img class="cart-item-image" src="Images/Album 3.png" width="100">
-                        <span class="cart-item-title">Album 3</span>
-                    </div>
-                    <span class="cart-price cart-column">15 €</span>
-                    <div class="cart-quantity cart-column">
-                        <input class="cart-quantity-input" type="number" value="1">
-                        <button class="btn btn-danger" role="button">REMOVE</button>
-                    </div>
-                </div>
+                
             </div>
             <div class="cart-total">
                 <span class="cart-total-title">TOTAL</span>
-                <span class="cart-total-price">35 €</span>
+                <span class="cart-total-price">0 €</span>
             </div>
                 <button class="btn btn-primary btn-purchase" role="button">PURCHASE</button>
         </section>
